fix keyword spelling

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [
     "csv",
     "parser",
-    "grammer",
+    "grammar",
     "generator"
   ],
   "author": "Jerry Sievert <code@legitimatesounding.com> (http://legitimatesounding.com/blog/)",
